# sde-importance-sampling

./: .gitignore  Makefile  README.md  delete_figures.sh  delete_greedy_figures.sh  delete_metadynamics_figures.sh  delete_txt_files.sh  langevin1d_reference_solution.sh  langevin1d_sampling.sh  md_1d_sampling.py  md_1d_sampling_metadynamics.py  plotting.py  rare_event_sampling.py  requirements.txt  script_gd.sh  setup.cfg  setup.py  tools.py
mds/: ansatz_functions.py  base_parser_1d.py  base_parser_2d.py  base_parser_nd.py  cat_report_sample_nd_metadynamics.py  cat_report_sample_nd_not_controlled.py  compute_1d_hjb_solution.py  compute_2d_hjb_solution.py  compute_det_hjb_solution.py  compute_nd_hjb_solution.py  decorators.py  deprecated_methods.py  functions.py  gaussian_1d_ansatz_functions.py  gaussian_2d_ansatz_functions.py  gaussian_nd_ansatz_functions.py  gd_1d_ipa_gaussian_ansatz.py  gd_2d_ipa_gaussian_ansatz.py  gd_nd_ipa_gaussian_ansatz.py  gradient_descent.py  gradient_descent_test.py  hjb_1d_solver.py  hjb_2d_solver.py  langevin1d_artificial_tilted_dynamics.py  langevin1d_fake_metadynamics.py  langevin1d_gd_greedy.py  langevin1d_gd_greedy_plots.py  langevin1d_metadynamics.py  langevin1d_optimal_solution.py  langevin1d_reference_solution.py  langevin1d_sampling.py  langevin1d_sampling_drifted.py  langevin1d_sampling_drifted_old.py  langevin1d_sampling_not_drifted.py  langevin1d_sampling_not_drifted_old.py  langevin1d_sampling_soc.py  langevin1d_test.py  langevin1d_tilted_sampling.py  langevin2d_reference_solution.py  langevin_1d_gd_ipa.py  (+124 more)
tests/: conftest.py  (+13 more)
(+114 files in other folders)
