[metadata]
name = sde-importance-sampling
version = file: VERSION
author = Enric Ribera Borrell 
author_email = ribera.borrell@fu-berlin.de
description = Importance Sampling strategies for metastable diffusions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riberaborrell/sde-importance-sampling
project_urls =
    Bug Tracker = https://github.com/riberaborrell/sde-importance-sampling/issues
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
zip_safe = False
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
   notebook
   numpy
   matplotlib
   scipy
   torch

[options.extras_require]
test = pytest

[options.packages.find]
where = src
